feat: bungae entity 수정, createBungaeMember() ,bungaeList()
bungae entity bungaeType을 enum으로 변경, createBungae()할 때 로그인한 사용자가 주최자가 되어 bungaeMember 생성, 개설된 번개모임 출력하는 bungaeList 추가(view 수정 필요)

--- a/src/main/resources/templates/bungaeForm.html
+++ b/src/main/resources/templates/bungaeForm.html
@@ -14,14 +14,14 @@
             <tr>
                 <th>모임 주제</th>
                 <td>
-                    <select name="Cg_code" id="Cg_code" required class="form-control">
+                    <select name="bungaeType" id="bungaeType" required class="form-control">
                         <option disabled selected>::카테고리::</option>
-                        <option>술자리</option>
-                        <option>축구</option>
-                        <option>자전거</option>
-                        <option>러닝</option>
-                        <option>공부</option>
-                        <option>농구</option>
+                        <option value="DRINK">술자리</option>
+                        <option value="SOCCER">축구</option>
+                        <option value="CYCLE">자전거</option>
+                        <option value="RUNNING">러닝</option>
+                        <option value="STUDY">공부</option>
+                        <option value="BASKETBALL">농구</option>
                     </select>
                 </td>
             </tr>
