--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bungae List</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                url: '/bungae/getList',
+                type: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    $.each(data, function (index, item) {
+                        let list = `<p>ID: ${item.bungaeId}, Type: ${item.bungaeType},
+                                    Name: ${item.bungaeName}, Members: ${item.bungaeMaxMember},
+                                    Start: ${item.bungaeStartTime}</p>`;
+                        $('#bungaeInfo').append(list);
+                    });
+                },
+                error: function (err) {
+                    alert('Error: ' + err);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
-<ul id="bungaeList"></ul>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $.ajax({
-            url: '/bungaeList',
-            type: 'GET',
-            dataType: 'json',
-            success: function (data) {
-                var bungaeList = $('#bungaeList');
-                bungaeList.empty(); // 기존 목록 제거
-                $.each(data, function (index, bungae) {
-                    bungaeList.append('<li>' + bungae.someProperty + '</li>'); // Bungae 객체의 속성에 따라 수정
-                });
-            },
-            error: function (xhr, status, error) {
-                console.error('AJAX Error: ' + status, error);
-            }
-        });
-    });
-</script>
+<h1>번개 리스트</h1>
+<div id="bungaeInfo"></div>
 </body>
 </html>
