--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bungae List</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
