--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -13,7 +13,7 @@
         <input type="text" name="username" placeholder="아이디"><br><br>
         <input type="password" name="password" placeholder="비밀번호"><br><br>
         <button type="submit">로그인</button>
-        <a href="signup.html" th:href="@{signup}"><button type="button">회원가입</button></a>
+        <a href="#" th:href="@{signup}"><button type="button">회원가입</button></a>
     </form>
 </body>
 </html>
