--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>회원 가입</title>
-    <style>
-        .message {
-            font-size: 0.8em;
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/signup.css}">
+    <script th:src="@{/js/signup.js}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 <h2>회원 가입</h2>
-<form name="signup" th:action="@{/user/api/signup}" method="post" onsubmit="return false;">
-    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+<form name="signup" th:action="@{/user/api/signup}" method="post" onsubmit="return submitForm()">
+    <!--<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>-->
 
+    <input type="hidden" id= "idValid" name="idValid" th:value="false"/>
     <label for="userId">아이디:</label>
     <input type="text" id="userId" name="userId" placeholder="아이디">
-    <button type="button" onclick="checkID()">아이디 중복 확인</button><br>
-    <span id="idCheckMessage" class="message" style="color:red">* 중복 확인 미완료</span><br>
+    <button type="button" th:onclick="checkID()">아이디 중복 확인</button><br>
+    <span id="idCheckMessage" class="message" style="color:red">* 아이디 중복 확인 필수</span><br>
 
     <label for="passwd">비밀번호:</label>
     <input type="password" id="passwd" name="passwd" placeholder="비밀번호"><br><br>
@@ -48,99 +46,10 @@
     <label for="email">이메일:</label>
     <input type="email" id="email" name="email" placeholder="이메일"><br><br>
 
-    <button type="submit" id="btn-save" class="btn btn-dark">회원가입완료</button>
+    <div class="container">
+        <button type="submit" id="btn-save" class="btn btn-dark">회원가입 완료</button>
+    </div>
+
 </form>
-<script th:inline="javascript">
-    // ID 중복 검사 함수를 Promise를 반환하도록 변경
-    function checkID() {
-        const userId = document.getElementById('userId').value;
-        const idCheckMessage = document.getElementById('idCheckMessage');
-
-        return fetch('/user/check_id', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ userId: userId })
-        })
-            .then(response => response.json())
-            .then(data => {
-                if (data.data.available) {
-                    alert("사용 가능한 아이디입니다.");
-                    idCheckMessage.textContent = "* 중복 확인 완료";
-                    idCheckMessage.style.color = "green";
-                    return true;
-                } else {
-                    alert("이미 사용 중인 아이디입니다.");
-                    idCheckMessage.textContent = "* 아이디 사용 불가";
-                    idCheckMessage.style.color = "red";
-                    return true;
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert("아이디 확인 중 오류가 발생했습니다.");
-                return true;
-            });
-    }
-
-    // 비밀번호 일치 검사
-    function checkPWD() {
-        let pass1 = document.forms["signup"]["passwd"].value;
-        let pass2 = document.forms["signup"]["passwdCheck"].value;
-        let pwdMessage = document.getElementById("passwordMessage");
-
-        if (pass1 !== pass2) {
-            pwdMessage.textContent = "비밀번호가 일치하지 않습니다";
-            pwdMessage.style.color = "red";
-            return false;
-        } else {
-            pwdMessage.textContent = "비밀번호가 일치합니다";
-            pwdMessage.style.color = "green";
-            return true;
-        }
-    }
-
-    // 폼 제출 함수
-    async function submitForm() {
-        let isValidID = await checkID();
-        let isValidPWD = checkPWD();
-
-        if (isValidID && isValidPWD) {
-            let data = {
-                userId: $("#userId").val(),
-                passwd: $("#passwd").val(),
-                email: $("#email").val(),
-                name: $("#name").val(),
-                nickname: $("#nickname").val(),
-                birth: $("#birth").val(),
-                tel: $("#tel").val(),
-                gender: $("#gender").val()
-            };
-
-
-            $.ajax({
-                type: "POST",
-                url: "/user/api/signup",
-                data: JSON.stringify(data),
-                contentType: "application/json; charset=utf-8",
-                dataType: "json"
-            }).done(function(response) {
-                if (response.success) {
-                    window.location.href = '/user/signupSuccess'; // 성공 페이지로 리디렉션
-                } else {
-                    alert('회원가입 실패: ' + response.message);
-                }
-            }).fail(function(error) {
-                alert('회원가입 처리 중 오류 발생');
-            });
-        } else {
-            alert("회원가입 실패했습니다.");
-        }
-
-        return false; // 기본 제출 이벤트 방지
-    }
-
-</script>
 </body>
 </html>
