--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,76 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>지도 화면</title>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=k495h0yzln"></script>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<div id="map" style="width:100%;height:500px;"></div>
-<script>
-    navigator.geolocation.getCurrentPosition(function(position) {
-    var lat = position.coords.latitude,
-        lon = position.coords.longitude;
-    var mapOptions = {
-        center: new naver.maps.LatLng(lat, lon),
-        zoom: 15,
-        zoomControl: true,
-        zoomControlOptions: {
-        position: naver.maps.Position.TOP_RIGHT,
-        style: naver.maps.ZoomControlStyle.SMALL
-        }
-    };
+<div th:replace="layout/header :: header"></div>
+<main>
+    <div id="map" style="width:100%;height:600px;"></div>
+    <script>
+        navigator.geolocation.getCurrentPosition(function(position) {
+            var lat = position.coords.latitude,
+                lon = position.coords.longitude;
+            var mapOptions = {
+                center: new naver.maps.LatLng(lat, lon),
+                zoom: 15,
+                zoomControl: true,
+                zoomControlOptions: {
+                    position: naver.maps.Position.TOP_RIGHT,
+                    style: naver.maps.ZoomControlStyle.SMALL
+                }
+            };
 
-    var map = new naver.maps.Map('map', mapOptions);
-
-
-
-    var markerOptions = {
-        position: new naver.maps.LatLng(lat, lon),
-        map: map,
-        animation: naver.maps.Animation.DROP
-    };
-
-    var marker = new naver.maps.Marker(markerOptions);
-
-    var contentString = [
-    '<div class="iw_inner">',
-    '   <h3>test</h3>',
-    '   <p><br>',
-    '       <br>',
-    '       <br>',
-    '   </p>',
-    '</div>'
-    ].join('');
+            var map = new naver.maps.Map('map', mapOptions);
 
 
 
-    var infowindow = new naver.maps.InfoWindow({
-        content: contentString
-    });
+            var markerOptions = {
+                position: new naver.maps.LatLng(lat, lon),
+                map: map,
+                animation: naver.maps.Animation.DROP
+            };
 
-    naver.maps.Event.addListener(marker, "click", function(e) {
-        if (infowindow.getMap()) {
-            infowindow.close();
-        } else {
-            infowindow.open(map, marker);
-        }
-    });
+            var marker = new naver.maps.Marker(markerOptions);
 
-    var locationBtnHtml= '<a href="#" class="btn_mylct"><button>내 위치</button></a>';
-    var customControl = new naver.maps.CustomControl(locationBtnHtml, {
-    position: naver.maps.Position.RIGHT_CENTER
-    });
+            var contentString = [
+                '<div class="iw_inner">',
+                '   <h3>test</h3>',
+                '   <p><br>',
+                '       <br>',
+                '       <br>',
+                '   </p>',
+                '</div>'
+            ].join('');
 
-    naver.maps.Event.once(map, 'init', function() {
-    customControl.setMap(map);
-    naver.maps.Event.addDOMListener(customControl.getElement(), 'click', function() {
-        map.setCenter(new naver.maps.LatLng(lat, lon));
+
+
+            var infowindow = new naver.maps.InfoWindow({
+                content: contentString
+            });
+
+            naver.maps.Event.addListener(marker, "click", function(e) {
+                if (infowindow.getMap()) {
+                    infowindow.close();
+                } else {
+                    infowindow.open(map, marker);
+                }
+            });
+
+            var locationBtnHtml= '<a href="#" class="btn_mylct"><img class="target" src="/images/target.png"/></a>';
+            var customControl = new naver.maps.CustomControl(locationBtnHtml, {
+                position: naver.maps.Position.RIGHT_CENTER
+            });
+
+            naver.maps.Event.once(map, 'init', function() {
+                customControl.setMap(map);
+                naver.maps.Event.addDOMListener(customControl.getElement(), 'click', function() {
+                    map.setCenter(new naver.maps.LatLng(lat, lon));
+                });
+            });
         });
-    });
-});
 
 
-</script>
+    </script>
+</main>
+<div th:replace="layout/footer :: footer"></div>
 </body>
 </html>
