--- a/src/main/resources/templates/user/signupSuccess.html
+++ b/src/main/resources/templates/user/signupSuccess.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>회원가입 성공</title>
+
+
 </head>
 <body>
-<h1>회원가입 성공</h1>
-<hr>
-<p>
-  <span sec:authentication="name"></span>님 환영합니다~
-</p>
-<a th:href="@{'/'}"> 메인으로 이동</a>
+<!--<div th:replace="layout/header :: header"></div>-->
+<form name="signupSuccess" th:action="@{/user/signupSuccess}" method="get">
+<!--  <main>-->
+    <h1>회원가입 성공</h1>
+    <hr>
+    <div id="welcomeMessage"></div>
+    <a th:href="@{login}"><button type="button">로그인으로 이동</button></a>
+
+    <!--  </main>-->
+
+<!--<div th:replace="layout/footer :: footer"></div>-->
+</form>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const nickname = localStorage.getItem('nickname');
+        const welcomeMessage = document.getElementById('welcomeMessage');
+        if (nickname && welcomeMessage) {
+            welcomeMessage.innerHTML = `<p>${nickname}님, 환영합니다!</p>`;
+        } else {
+            console.error('welcomeMessage를 찾을 수 없거나 nickname이 없음');
+        }
+    });
+</script>
+
 </body>
 </html>
