Feat: 회원 가입, 로그인 기능 구현
SMS API 개발 추가해야함

--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -31,7 +31,7 @@
     <input type="text" id="nickname" name="nickname" placeholder="닉네임"><br><br>
 
     <label for="birth">생년월일:</label>
-    <input type="text" id="birth" name="birth" placeholder="생년월일"><br><br>
+    <input type="text" id="birth" name="birth" placeholder="YYYYMMDD"><br><br>
 
     <label for="tel">전화번호:</label>
     <input type="text" id="tel" name="tel" placeholder="010-1234-5678">
