Feat: 회원 가입, 로그인 기능 구현
SMS API 개발 추가해야함

--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -21,7 +21,7 @@
     <label for="passwd">비밀번호:</label>
     <input type="password" id="passwd" name="passwd" placeholder="비밀번호"><br><br>
     <label for="passwdCheck">비밀번호 확인:</label>
-    <input type="password" id="passwdCheck" name="passwdCheck" placeholder="비밀번호 확인"><br>
+    <input type="password" id="passwdCheck" name="passwdCheck" onkeyup="checkPWD()" placeholder="비밀번호 확인"><br>
     <span id="passwordMessage" class="message"></span><br><br>
 
     <label for="name">이름:</label>
