Feat: 마이페이지 회원정보 불러오기 기능 구현
프로필 수정, 리스트, 후기 열람 구현해야함

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -14,7 +14,7 @@
                 <li><a href="/map" th:href="@{/map}">홈</a></li>
                 <li><a href="#" th:href="@{#}">모임 생성</a></li>
                 <li><a href="#" th:href="@{#}">모임 목록</a></li>
-                <li><a href="#" th:href="@{#}">내 정보</a></li>
+                <li><a href="/user/profile" th:href="@{user/profile}">내 정보</a></li>
             </ul>
         </nav>
     </div>
