feat: 주변 모임 검색, 모임 취소
현재 위치 기준으로 반경 n미터 안의 번개 모임 검색 가능, Point 타입 데이터 전송하기 위해 PointSerializer 만듦, entity에서 직렬화하면 안좋다해서 DTO만 직렬화 하고 list 불러올 때 dto로 변환해서 불러오게 함.
번개모임 취소 관련 2가지 버전으로 나눠 놓음(db에서 삭제, 상태코드만 변경)

--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -11,10 +11,12 @@
                 type: 'GET',
                 dataType: 'json',
                 success: function (data) {
-                    $.each(data, function (index, item) {
-                        let list = `<p>ID: ${item.bungaeId}, Type: ${item.bungaeType},
-                                    Name: ${item.bungaeName}, Members: ${item.bungaeMaxMember},
-                                    Start: ${item.bungaeStartTime}</p>`;
+                    $.each(data, function (i, bungae) {
+                        let list = `<p>ID: ${bungae.bungaeId}, Type: ${bungae.bungaeType},
+                                    Name: ${bungae.bungaeName}, MaxMember: ${bungae.bungaeMaxMember},
+                                    StartTime: ${bungae.bungaeStartTime}, Age: ${bungae.bungaeMinAge} ~ ${bungae.bungaeMaxAge},
+                                    Location: [경도: ${bungae.bungaeLocation.latitude}, 위도: ${bungae.bungaeLocation.longitude}]
+                                    </p>`;
                         $('#bungaeInfo').append(list);
                     });
                 },
