--- a/src/main/resources/templates/bungaeForm.html
+++ b/src/main/resources/templates/bungaeForm.html
@@ -36,7 +36,13 @@
             </tr>
             <tr>
                 <th>위치</th>
-                <td></td>
+                <td>
+                    <label for="latitude">위도:</label>
+                    <input type="text" id="latitude" name="latitude" required>
+
+                    <label for="longitude">경도:</label>
+                    <input type="text" id="longitude" name="longitude" required>
+                </td>
             </tr>
             <tr>
                 <th>모임 대표 이미지</th>
@@ -48,7 +54,6 @@
                 <th>인원</th>
                 <td>
                     <select name="bungaeMaxMember" id="bungaeMaxMember" required class="form-control">
-                        x
                         <option disabled selected>::인원::</option>
                         <option>1</option>
                         <option>2</option>
