--- a/src/main/resources/templates/bungaeList.html
+++ b/src/main/resources/templates/bungaeList.html
@@ -15,7 +15,7 @@
                         let list = `<p>ID: ${bungae.bungaeId}, Type: ${bungae.bungaeType},
                                     Name: ${bungae.bungaeName}, MaxMember: ${bungae.bungaeMaxMember},
                                     StartTime: ${bungae.bungaeStartTime}, Age: ${bungae.bungaeMinAge} ~ ${bungae.bungaeMaxAge},
-                                    Location: [경도: ${bungae.bungaeLocation.latitude}, 위도: ${bungae.bungaeLocation.longitude}]
+                                    Location: [위도: ${bungae.bungaeLocation.latitude}, 경도: ${bungae.bungaeLocation.longitude}]
                                     </p>`;
                         $('#bungaeInfo').append(list);
                     });
