--- a/src/main/resources/templates/bungae_ing.html
+++ b/src/main/resources/templates/bungae_ing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/map.css">
+  <link rel="stylesheet" href="/css/bungae_ing.css">
 </head>
 
 <body>
@@ -25,58 +25,35 @@
       </div>
     </div>
   </nav>
-  <div class="" style="">
+  <div class="py-3">
     <div class="container">
       <div class="row">
-        <div class="col-md-4" style="">
-          <form class="form-inline mx-auto my-2">
-            <div class="input-group mx-auto">
-              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
-              <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
-            </div>
-          </form>
-          <div class="list-group">
+        <div class="col-md-12">
+          <h1 class="text-center mb-3">참여중인 번개</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8" style="">
+          <div class="list-group" style="">
             <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
+              <div class="row">
+                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
+                <div class="col-md-8" style="">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="my-2">(번개명)</h5>
+                  </div>
+                  <p class="text-left">일시</p>
+                  <p class="text-left">장소</p>
+                  <p class="text-left">인원</p>
+                </div>
               </div>
             </a>
           </div>
         </div>
-        <div class="col-md-8" id="map" style="	height: 600px;"></div>
       </div>
     </div>
   </div>
