--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/map.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
@@ -25,58 +25,18 @@
       </div>
     </div>
   </nav>
-  <div class="" style="">
+  <div class="py-5 text-center border-dark" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-4" style="">
-          <form class="form-inline mx-auto my-2">
-            <div class="input-group mx-auto">
-              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
-              <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
-            </div>
+        <div class="mx-auto col-md-6 col-10 bg-white p-5">
+          <h1 class="mb-4">로그인</h1>
+          <form>
+            <div class="form-group"> <input type="text" class="form-control" placeholder="ID" id="form9"> </div>
+            <div class="form-group mb-3"> <input type="password" class="form-control" id="form10" placeholder="Password"> <small class="form-text text-muted text-right">
+                <a href="#">아이디 찾기</a>
+              </small> </div><button type="submit" class="btn btn-primary mr-3">로그인</button><button type="submit" class="btn btn-primary ml-3">회원가입</button>
           </form>
-          <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-          </div>
         </div>
-        <div class="col-md-8" id="map" style="	height: 600px;"></div>
       </div>
     </div>
   </div>
