--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/map.css">
+  <link rel="stylesheet" href="/css/chatting.css">
 </head>
 
-<body>
+<body style="">
   <nav class="navbar navbar-expand-md bg-primary navbar-light border-bottom border-dark" style="	height: 80px;">
     <div class="container"> <a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar16">
         <span class="navbar-toggler-icon"></span>
@@ -25,58 +25,31 @@
       </div>
     </div>
   </nav>
-  <div class="" style="">
+  <div class="py-3" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-4" style="">
-          <form class="form-inline mx-auto my-2">
-            <div class="input-group mx-auto">
-              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
-              <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
+        <div class="col-md-12">
+          <h1 class="text-center mb-3">번개 채팅</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mb-3">
+    <div class="text-center container d-flex flex-row justify-content-center">
+      <div class="row text-center border border-dark" style="	width: 600px;	height: 600px;"></div>
+    </div>
+  </div>
+  <div class="">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <form class="form-inline text-center d-flex justify-content-center my-3">
+            <div class="input-group text-center">
+              <input type="text" class="form-control form-control-lg" placeholder="내용을 입력하세요." style="	width: 550px;">
+              <div class="input-group-append"><button class="btn btn-primary" type="button">전송</button></div>
             </div>
           </form>
-          <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-          </div>
         </div>
-        <div class="col-md-8" id="map" style="	height: 600px;"></div>
       </div>
     </div>
   </div>
