--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/map.css">
+  <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
@@ -25,58 +25,32 @@
       </div>
     </div>
   </nav>
-  <div class="" style="">
+  <div class="pt-5 pb-5" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-4" style="">
-          <form class="form-inline mx-auto my-2">
-            <div class="input-group mx-auto">
-              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
-              <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
+        <div class="col-md-12"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" style="	width: 100px;	height: 100px;"></div>
+      </div>
+      <div class="row my-3">
+        <div class="col-md-12" style="">
+          <p class="lead text-center">???님의 평점은 ???점 입니다.</p>
+        </div>
+      </div>
+      <div class="row my-3">
+        <div class="col-md-12" style="">
+          <p class="lead text-center">자기소개</p>
+          <div class="row border border-dark">
+            <div class="col-md-12">
+              <p class="lead">강남 사는 26살입니다~</p>
             </div>
-          </form>
-          <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-              </div>
-            </a>
           </div>
         </div>
-        <div class="col-md-8" id="map" style="	height: 600px;"></div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center"><a class="btn btn-primary mx-3" href="#">프로필 수정</a><a class="btn btn-primary mx-3" href="#">리뷰 관리</a><a class="btn btn-primary mx-3" href="#">블랙리스트 관리</a></div>
       </div>
     </div>
   </div>
