Feat: 마이페이지 회원정보 이미지 수정, 삭제 기능 구현

--- a/src/main/resources/templates/user/editProfile.html
+++ b/src/main/resources/templates/user/editProfile.html
@@ -11,8 +11,9 @@
 <body>
 <div th:replace="layout/header :: header"></div>
 <main>
-    <form name="signup" onsubmit="return updateForm()">
-        <div id="errorContainer" style="display:none; color: red;"></div>
+    <form name="editProfile" onsubmit="return updateForm()" enctype="multipart/form-data">
+
+    <div id="errorContainer" style="display:none; color: red;"></div>
         <div class="profile-container">
             <div class="form-group">
                 <img id="profile-image" alt="Profile Image" th:src="${userImage}" onload="checkImageSource()" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;"/><br>
