--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -11,10 +11,9 @@
 <body>
 <div th:replace="layout/header :: header"></div>
 <main>
-    <div id="errorContainer" style="display:none; color: red;"></div>
-
+    <div id="errorContainer" style="display:block; color: red;"></div>
     <div class="profile-container">
-        <img id="profile-image" src="" alt="Profile Image" />
+         <img id="profile-image" alt="Profile Image" />
 
         <div class="profile-info">
             <h3 id="userNickname">사용자 이름</h3>
